[tool.poetry]
name = "cryptbuddy"
version = "0.0.5"
description = ""
authors = ["Kush Patel <kush@kush.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.9.0"}
PyNaCl = "^1.5.0"
password-strength = "^0.0.3.post2"
appdirs = "^1.4.4"
pytest = "^7.3.1"
ormsgpack = "^1.2.6"

[tool.poetry.scripts]
cryptbuddy = "cryptbuddy.main:app"
crypt = "cryptbuddy.main:app"
cb = "cryptbuddy.main:app"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mkdocs = "^1.4.3"
mkdocs-terminal = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
